@@ -168,11 +168,12 @@ Also see the `SourceForge Bug Tracker`_.
     reported with the correct "source" or "line" numbers.  Perhaps all
     Reporter calls need "source" and "line" keyword arguments.
     Elements' .line assignments should be checked.  (Assign to .source
-    too?  Add a set_info method?  To what?)  There's a test in
-    test/test_parsers/test_rst/test_directives/test_include.py.
+    too?  Add a set_info method?  To what?)
 
-    This is partially fixed in the commit on 2009-09-25, although the
-    commented-out test case in the abovementioned file does still fail.
+    This is partially fixed in the commits from 2009-09-25 and 2009-10-28.
+    The test in test/test_parsers/test_rst/test_directives/test_include.py
+    works, but there are still plenty of system messages pointing to the
+    wrong spot.
 
   - Some line numbers in elements are not being set properly
     (explicitly), just implicitly/automatically.  See rev. 1.74 of
