@@ -166,9 +166,14 @@ class Reporter:
         Raise an exception or generate a warning if appropriate.
         """
         attributes = kwargs.copy()
+        # print "System Message: ", self.levels[level],
+        # print " source", unicode(attributes.get("source")).encode('utf8'),
+        # print " line", attributes.get("line")
+        # print " spot", attributes.get("spot")
         if 'base_node' in kwargs:
             source, line = get_source_line(kwargs['base_node'])
             del attributes['base_node']
+            # print " from base_node", source, line
             if source is not None:
                 attributes.setdefault('source', source)
             if line is not None:
